# bytestring-strict-builder

./: .travis.yml  build.bash  bytestring-strict-builder.cabal  cabal.project  strict-bytes-builder.cabal
.github/workflows/: format.yaml  test.yaml
benchmarks/: Main.hs
tests/: Main.hs
