name:
  strict-bytes-builder
version:
  0.3.2
category:
  Text, ByteString, Builders, Serialization
synopsis:
  An efficient strict text builder
homepage:
  https://github.com/nikita-volkov/strict-bytes-builder 
bug-reports:
  https://github.com/nikita-volkov/strict-bytes-builder/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/strict-bytes-builder.git

library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    StrictBytesBuilder
  other-modules:
    StrictBytesBuilder.Population
    StrictBytesBuilder.Prelude
    StrictBytesBuilder.UncheckedShifting
    StrictBytesBuilder.UTF8
  build-depends:
    semigroups >= 0.18 && < 0.19,
    bytestring >= 0.10 && < 0.11,
    base-prelude >= 1.0.2 && < 2,
    base >= 4.6 && < 5

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    strict-bytes-builder,
    -- testing:
    tasty == 0.11.*,
    tasty-quickcheck == 0.8.*,
    tasty-smallcheck == 0.8.*,
    tasty-hunit == 0.9.*,
    quickcheck-instances >= 0.3.11 && < 0.4,
    -- general:
    rerebase == 1.*
